# video-to-3d

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/: semantic.yaml  splatfacto.yaml
dn-splatter/dn_splatter/: dn_datamanager.py
dn-splatter/dn_splatter/data/: dn_dataset.py
scripts/: align_depth.py  clean_splat.py  dense_init.py  diagnose.py  export_gsplat_ply.py  export_visualization.py  run_pipeline.sh
src/api/: server.py
src/data/: __init__.py  dataset_builder.py  pose_estimator.py  video_processor.py
src/models/: __init__.py  depth_prior.py  gaussian_trainer.py  semantic_field.py
src/tests/: test_pose_estimator.py  test_semantic_field.py  test_video_processor.py
